# IntoxAI

./: .env.template  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: faq.txt
src/: ingest.py  rag_chain.py
