[tool.poetry]
name = "Inot-xai"
version = "0.1.0"
description = "A Retrieval-Augmented Generation (RAG) system for xAI FAQs using LangChain"
authors = ["Anas <anas.ahamad955@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"  # Specify compatible Python versions
langchain = "^0.3.21"
langchain-community = "^0.3.19"
tiktoken = "^0.9.0"
langchain-openai = "^0.3.9"
langchainhub = "^0.1.14"
chromadb = "^0.6.3"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
start = "main:main"

[[tool.poetry.packages]]
include = "src"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"